[gd_scene load_steps=6 format=3 uid="uid://b2ga6ka57b8hf"]

[ext_resource type="Script" path="res://Scenes/Levels/full_level_parent.gd" id="1_gp7kt"]
[ext_resource type="PackedScene" uid="uid://cxcbllnjvnh5j" path="res://Scenes/Levels/level_parent.tscn" id="1_mevt1"]
[ext_resource type="PackedScene" uid="uid://dhg0dxlbdhr00" path="res://Scenes/Player/player.tscn" id="3_w7gn8"]
[ext_resource type="PackedScene" uid="uid://dr3ljkrsv2d4r" path="res://Scenes/KillBarrier/kill_barrier.tscn" id="4_xwfd4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2s7ls"]
size = Vector2(13198.5, 172.5)

[node name="FullLevelParent" type="Node2D"]
script = ExtResource("1_gp7kt")

[node name="Dimension1" parent="." instance=ExtResource("1_mevt1")]

[node name="Dimension2" parent="." instance=ExtResource("1_mevt1")]

[node name="Obtainables" type="Node2D" parent="."]

[node name="SpecialTiles" type="Node2D" parent="."]

[node name="Checkpoints" type="Node2D" parent="SpecialTiles"]

[node name="FullEnemies" type="Node2D" parent="."]

[node name="Player" parent="." node_paths=PackedStringArray("full_level_parent") instance=ExtResource("3_w7gn8")]
position = Vector2(2.08165e-12, -300)
scale = Vector2(0.5, 0.5)
collision_layer = 64
collision_mask = 63
full_level_parent = NodePath("..")

[node name="KillBarrier" parent="." instance=ExtResource("4_xwfd4")]
position = Vector2(-3000, 2.08165e-12)
start_point = Vector2(-3000, 2.08165e-12)
end_point = Vector2(1000, 2.08165e-12)
time = 60.0

[node name="LowerKillBarrier" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerKillBarrier"]
position = Vector2(4041, 813)
shape = SubResource("RectangleShape2D_2s7ls")

[connection signal="body_entered" from="LowerKillBarrier" to="." method="_on_lower_kill_barrier_body_entered"]

[editable path="Dimension1"]
[editable path="Dimension2"]
